--- a/styles/style.css
+++ b/styles/style.css
@@ -55,6 +55,8 @@ body {
   border: 0;
   box-shadow: 0 1px 2px rgba(0,0,0,.1);
   margin-right: 20px;
+  overflow: scroll;
+  max-height: 800px;
 }
 
 .video-list-entry {
